--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,10 +3,12 @@ site_author: Paul Green
 site_description: >-
   A repository for the lore and character details for the
   Mick Hargraves series of novels.
-repo_name: MickHargraves
+repo_name: Mick Hargraves
 repo_url: https://github.com/warlord0/MickHargraves
 docs_dir: notes
 theme:
+  icon:
+    repo: fontawesome/brands/git-alt
   logo: assets/logo.svg
   favicon: assets/favicon.png
   name: material
@@ -45,11 +47,15 @@ plugins:
   - tags
   - minify:
       minify_html: true
-copyright: Copyright &copy; 2025, Paul Green
+copyright: Black Eyes and Broken Souls © 2024 by Paul Green is licensed under CC BY-NC 4.0. To view a copy of this license, visit https://creativecommons.org/licenses/by-nc/4.0/
 watch:
   - includes
 extra:
   generator: false
+  social:
+    - icon: fontawesome/solid/certificate
+      link: https://creativecommons.org/licenses/by-nc/4.0/
+      name: License CC BY-NC-SA 4.0
 markdown_extensions:
   - abbr
   - admonition
